# react-learning

./: .gitignore  .prettierrc
animations/: index.html  package-lock.json  package.json  vite.config.js
animations/src/: App.css  App.jsx
authBackend/: .gitignore  authModel.py  database.py  dbModels.py  main.py  pydantic_schema.py  pyproject.toml
authBackend/router/: auth.py  authFunction.py  listings.py
authFrontend/: index.html  package-lock.json  package.json
authFrontend/src/: App.jsx  nav.css  nav.jsx
contextApi-lec1/: package-lock.json  package.json
contextApi-lec1/src/: App.jsx
contextTodo/: package-lock.json
contextTodo/src/: App.jsx  index.css
kanban/: index.html  script.js  style.css
learn-redux/: index.html  package-lock.json  package.json
learn-redux/src/: App.jsx
megaBlog/: .gitignore  package-lock.json  package.json
megaBlog/src/: App.css  App.jsx
megaPost/: package-lock.json  package.json
megaPost/src/: App.jsx  main.jsx
password-generator/: package-lock.json  package.json
password-generator/src/: App.css  App.jsx
reactPart1/: index.html  package-lock.json  package.json
reactPart1/src/: App.jsx  color_change.jsx  currency.jsx  main.jsx  passGenerator.jsx
reacthooks/: package-lock.json  package.json
redux-todo/: package-lock.json  package.json
routers/: index.html  package-lock.json  package.json  vite.config.js
snakeGame/: index.html  script.js  style.css
useContext/: package-lock.json  package.json
useContext-Theme/: index.html  package-lock.json
weather-info/: index.html  package-lock.json  package.json
(+84 files in other folders)
